feat: add ability to deploy shared policy group https://gravitee.atlassian.net/browse/APIM-5625